-
Bug
-
Resolution: Done
-
P1: Critical
-
5.11.0 Alpha
-
None
-
openSUSE Tumbleweed, GCC 7.3.0.
-
ce0ea1aa995ac5ee85caf5a131b9e82c6361e6d9
[ 5209s] In file included from /usr/include/qt5/QtGui/qopengl.h:146:0,
[ 5209s] from /usr/include/qt5/QtGui/qopenglcontext.h:60,
[ 5209s] from /usr/include/qt5/QtGui/QOpenGLContext:1,
[ 5209s] from /home/abuild/rpmbuild/BUILD/qtwebengine-everywhere-src-5.11.0-alpha/src/core/web_engine_context.cpp:99:
[ 5209s] /usr/include/qt5/QtGui/qopenglext.h:472:19: error: conflicting declaration 'typedef ptrdiff_t GLsizeiptr'
[ 5209s] typedef ptrdiff_t GLsizeiptr;
- relates to
-
QTBUG-66953 'GLsizeiptr' and 'GLintptr': redefinition; different basic types
-
- Closed
-