Fix mixing chromium gles2 types with qt defined ones

Avoid including chromium gles2 headers. This triggers
confiflic declaration between khronos_ssize_t which is
64bit and ptrdiff_t which is 32bits on 32bit platforms.

Task-number: QTBUG-66597
Change-Id: Icade95463365e05803f7f84889d0d3618ad48d65
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>